--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,25 @@
-# jenkinfile
+pipeline {
+agent any
+stages {
+stage ('build') {
+steps {
+echo "building the project..."
+}
+}
+stage ('deploy') {
+steps {
+echo "deploying the project..."
+}
+}
+stage ('test') {
+steps {
+echo "testing the project..."
+}
+}
+stage ('release') {
+steps {
+echo "re4leasing the project..."
+}
+}
+}
+} 
